--- a/index.html
+++ b/index.html
@@ -3,9 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/style.css">
     <title>Document</title>
 </head>
 <body>
-    Hello world
+    <div class="header">
+        <div class="header-title">
+            <div class="header-logo">
+                <img src="./IMG/logo.png" alt="logo">
+            </div>
+            <div class="phone">
+                <div class="phone-image">
+                    <img src="./IMG/phone.png" alt="phone">
+                </div>
+                <div class="phone-text">
+                    +9876543210
+                </div>
+            </div>
+            <div class="header-button">
+                <a class="button" href="#">КАТАЛОГ</a>
+                <a class="button" href="#">ГЛАВНАЯ</a>
+                <a class="button" href="#">O НАС</a>
+                <a class="button" href="#">КОНТАКТЫ</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
